--- a/admin/src/translations/en.json
+++ b/admin/src/translations/en.json
@@ -16,5 +16,6 @@
   "tab.whitelist.table.email": "Email",
   "tab.whitelist.table.created": "Created At",
   "tab.whitelist.delete.title": "Confirmation",
-  "tab.whitelist.delete.description" : "Are you sure you want to delete this?"
+  "tab.whitelist.delete.description": "Are you sure you want to delete this?",
+  "auth.login.keycloak": "Login with Keycloak"
 }
